Fix display wrapping long numbers

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ body {
     position: absolute;
     font-family: "Calculator";
     font-size: 90px;
+    white-space: nowrap;
 }
 
 .display {
